Updated rofi config to use new icon features
Configuration is now done in rofi/*.rasi instead of Xresources

--- a/i3/config
+++ b/i3/config
@@ -70,6 +70,7 @@ bindsym $mod+Return exec --no-startup-id kitty
 
 # Bring up launcher
 bindsym $mod+d exec --no-startup-id ~/.config/i3/scripts/polybar_wrapper rofi
+bindsym $mod+shift+d exec --no-startup-id ~/.config/i3/scripts/polybar_wrapper drun
 
 # Search open windows
 bindsym $mod+grave exec --no-startup-id ~/.config/i3/scripts/polybar_wrapper search
