Compton now uses kawase blur
New blur algorithm provided by compton fork https://github.com/GabrielTenma/compton-kawase-blur

--- a/config/compton.conf
+++ b/config/compton.conf
@@ -62,8 +62,8 @@ blur-background = true;
 # Blur background of opaque windows with transparent frames as well.
 # blur-background-frame = true;
 # Do not let blur radius adjust based on window opacity.
-blur-background-fixed = false;
-blur-kern = "11x11gaussian";
+blur-method = "kawase";
+blur-strength = 6;
 blur-background-exclude = [
     "window_type = 'override'"
 ];
