--- a/i3/config
+++ b/i3/config
@@ -54,6 +54,7 @@ font pango:DejaVu Sans 10
 # Show gaps between open windows; requires i3-gaps fork
 gaps inner 32
 gaps outer 32
+gaps top 48
 #-----------------------------------------------------------------------------#
 #=============================================================================#
 
