--- a/applications/custom/music.desktop
+++ b/applications/custom/music.desktop
@@ -3,8 +3,8 @@
 Version=1.0
 Terminal=false
 Type=Application
-Name=Google Play Music
-Exec=/opt/google/chrome/google-chrome --profile-directory=Default --app-id=fahmaaghhglfmonjliepjlchgpgfmobi
+Name=Play Music
+Exec=/home/ntc/.config/i3/scripts/music_player launch
 Icon=chrome-fahmaaghhglfmonjliepjlchgpgfmobi-Default
 StartupWMClass=crx_fahmaaghhglfmonjliepjlchgpgfmobi
 Categories=Network;WebBrowser;Custom;
