--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,15 +1,15 @@
 allow_remote_control yes
 
-font_family DejaVu Sans Mono for Powerline
+font_family Fira Code
 font_size 12.0
+
+disable_ligatures never
 
 cursor_shape beam
 
 scrollback_lines 2000
 enable_audio_bell no
 visual_bell_duration 0
-
-adjust_line_height 1
 
 background_opacity 0.9
 background  #2E3440
