--- a/config/polybar/config
+++ b/config/polybar/config
@@ -2,46 +2,55 @@
 #----------------------------- Global settings -------------------------------#
 #-----------------------------------------------------------------------------#
 
+[settings]
+compositing-overline = source
+compositing-underline = source
+
 [colors]
 include-file = ~/.config/polybar/colors
 
 [global/wm]
-margin-top = 16
+margin-top = 0
 margin-bottom = 0
 
 [bar/top]
+monitor = ${env:MONITOR:}
 enable-ipc = true
-override-redirect = true
+override-redirect = false
 wm-restack = i3
 bottom = false
 
+line-size = 6
+line-color = ${colors.primary}
+
 height = 40
-width = 70%
-offset-y = 16
-offset-x = 15%
+width = 100%
 fixed-center = true
 spacing = 1
 module-margin-left = 2
 module-margin-right = 2
 
-border-size = 4
 border-color = ${colors.primary}
+border-bottom-size = 4
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-font-0 = "Fira Sans:style=Bold:pixelsize=14;3"
-font-1 = "Fira Sans:pixelsize=14;3"
+font-0 = "Fira Sans:style=Bold:pixelsize=16;3"
+font-1 = "Fira Sans:pixelsize=16;3"
 font-2 = "Font Awesome 5 Free:style=Solid:pixelsize=18;3"
 font-3 = "Font Awesome 5 Free:style=Regular:pixelsize=18;3"
 font-4 = "Font Awesome 5 Brands:pixelsize=18;3"
 
 modules-left = i3
 modules-center = xwindow
-modules-right = volume date option_menu
+modules-right = volume date
 padding-right = 2
+padding-left = 1
 
-
+tray-position = right
+tray-detached = true
+tray-offset-x = -300
 
 #------------------------------- Left modules --------------------------------#
 
@@ -54,7 +63,7 @@ strip-wsnumbers = true
 label-focused = %name%
 label-focused-background = ${colors.primary}
 label-focused-foreground = ${colors.background}
-label-focused-underline  = ${colors.background-alt}
+label-focused-underline  = ${colors.background}
 label-focused-overline  = ${colors.background}
 label-focused-padding = 2
 
@@ -66,6 +75,7 @@ label-occupied-padding = 2
 
 label-urgent = %name%
 label-urgent-background = ${colors.urgent}
+label-urgent-underline  = ${colors.background}
 label-urgent-overline  = ${colors.background}
 label-urgent-padding = 2
 
@@ -89,25 +99,20 @@ label-visible-padding = ${self.label-focused-padding}
 
 [module/xwindow]
 type = internal/xwindow
-label = %{T2}%title:0:40:...%%{T-}
+label = %{T2}%title:0:50:...%%{T-}
 
 #-----------------------------=- Right modules -------------------------------#
-[module/option_menu]
-type = custom/ipc
-hook-0 = polybar_wrapper options_icon "closed"
-hook-1 = polybar_wrapper options_icon "open"
-initial = 1
-click-left = polybar_wrapper options
 
 [module/date]
 type = internal/date
 interval = 5
+date = %m/%d%
 time = %H:%M
-format-prefix ="  "
 format-prefix-foreground = ${colors.foreground}
-label = "%time% "
+label = "  %date%     %time%"
 
 [module/volume]
 type = internal/pulseaudio
 format-volume = "  <label-volume>"
 label-muted = "  muted"
+label-muted-foreground = ${colors.background-alt}
