--- a/applications/curated/wikipedia.desktop
+++ b/applications/curated/wikipedia.desktop
@@ -4,7 +4,7 @@ Version=1.0
 Terminal=false
 Type=Application
 Name=Wikipedia
-Exec=/opt/google/chrome/google-chrome --app="https://en.wikipedia.org" --incognito
+Exec=firefox -P app --new-window "https://en.wikipedia.org/wiki/Main_Page"
 Icon=web-wikipedia
 Categories=Network;WebBrowser;Curated;
 
