--- a/config/picom.conf
+++ b/config/picom.conf
@@ -18,10 +18,5 @@ opacity-rule = [
     "0:_NET_WM_STATE@[3]:32a = '_NET_WM_STATE_HIDDEN'",
     "0:_NET_WM_STATE@[4]:32a = '_NET_WM_STATE_HIDDEN'",
     "85:class_g = 'Steam'",
-    "85:name *= 'Google Play Music'"
+    "85:class_g = 'Spotify'",
 ];
-
-# Unredirect all windows if a full-screen opaque window is detected, to maximize performance for full-screen windows, like games.
-# Known to cause flickering when redirecting/unredirecting windows.
-# paint-on-overlay may make the flickering less obvious.
-unredir-if-possible = true;
