--- a/refind/refind.conf
+++ b/refind/refind.conf
@@ -6,20 +6,15 @@ timeout 10
 use_graphics_for linux,windows
 
 menuentry "Arch Linux" {
-    icon     /EFI/BOOT/refind-nord/icons/os_arch.png
+    icon     /EFI/refind/refind-nord/icons/os_arch.png
     volume   "Arch"
     loader   vmlinuz-linux
     initrd   initramfs-linux.img
-    options  "root=PARTUUID=706cc550-71df-db40-8c6f-ad08386559da resume=PARTUUID=8ea2d138-324c-de4a-a682-92ef733a07f4 rw nvidia-drm.modeset=1 log_level=7"
+    options  "cryptdevice=UUID=6cbad19e-8416-4232-ac95-c42d364d8fbb:cryptlvm root=/dev/NVMEGroup/root resume=/dev/NVMEGroup/swapnvidia-drm.modeset=1 rw log_level=7"
 
     submenuentry "Boot to terminal" {
         add_options "systemd.unit=multi-user.target"
     }
-}
-
-menuentry "Windows 10" {
-    volume  0e135533-3b3c-11eb-a215-f07959630262
-    loader  \EFI\Microsoft\Boot\bootmgfw.efi
 }
 
 include refind-nord/theme.conf
