fixed rEFInd config

--- a/refind/refind.conf
+++ b/refind/refind.conf
@@ -6,11 +6,10 @@ timeout 10
 use_graphics_for linux,windows
 
 menuentry "Arch Linux" {
-    icon     /EFI/refind/refind-nord/icons/os_arch.png
-    volume   "Arch"
+    icon     /EFI/BOOT/refind-nord/icons/os_arch.png
     loader   vmlinuz-linux
     initrd   initramfs-linux.img
-    options  "cryptdevice=UUID=6cbad19e-8416-4232-ac95-c42d364d8fbb:cryptlvm root=/dev/NVMEGroup/root resume=/dev/NVMEGroup/swapnvidia-drm.modeset=1 rw log_level=7"
+    options  "cryptdevice=UUID=6cbad19e-8416-4232-ac95-c42d364d8fbb:cryptlvm root=/dev/NVMEGroup/root resume=/dev/NVMEGroup/swap initrd=amd-ucode.img nvidia-drm.modeset=1 rw"
 
     submenuentry "Boot to terminal" {
         add_options "systemd.unit=multi-user.target"
