updated refind theme and config

--- a/refind/refind.conf
+++ b/refind/refind.conf
@@ -4,15 +4,17 @@ scanfor manual,external,optical
 default_selection 1
 timeout 10
 use_graphics_for linux,windows
+use_nvram false
 
 menuentry "Arch Linux" {
     icon     /EFI/BOOT/refind-nord/icons/os_arch.png
     loader   vmlinuz-linux
     initrd   initramfs-linux.img
-    options  "cryptdevice=UUID=6cbad19e-8416-4232-ac95-c42d364d8fbb:cryptlvm root=/dev/NVMEGroup/root resume=/dev/NVMEGroup/swap initrd=amd-ucode.img nvidia-drm.modeset=1 rw"
+    # Options "quiet splash loglevel=3 rd.udev.log_priority=3 vt.global_cursor_default=0" are for Plymouth
+    options  "cryptdevice=UUID=6cbad19e-8416-4232-ac95-c42d364d8fbb:cryptlvm root=/dev/NVMEGroup/root resume=/dev/NVMEGroup/swap nvidia-drm.modeset=1 rw quiet splash loglevel=3 rd.udev.log_priority=3 vt.global_cursor_default=0"
 
     submenuentry "Boot to terminal" {
-        add_options "systemd.unit=multi-user.target"
+        options  "cryptdevice=UUID=6cbad19e-8416-4232-ac95-c42d364d8fbb:cryptlvm root=/dev/NVMEGroup/root systemd.unit=multi-user.target rw"
     }
 }
 
