integrated conky into the options side panel

--- a/config/picom.conf
+++ b/config/picom.conf
@@ -8,6 +8,7 @@ blur-method = "dual_kawase";
 blur-strength = 3;
 blur-background-exclude = [
     "window_type = 'override'",
+    "class_g = 'Conky'",
 ];
 
 opacity-rule = [
